--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
